--- a/NerdyTimer/NerdyTimer/View/MainWindow.xaml
+++ b/NerdyTimer/NerdyTimer/View/MainWindow.xaml
@@ -1,4 +1,5 @@
 ﻿<Window x:Class="NerdyTimer.MainWindow"
+        Icon="../Images/NerdyTimer_Icon.ico"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:viewModel="clr-namespace:NerdyTimer.ViewModel"       
